# GreenUp

Dev/greenup-backend/: .coveragerc  .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
Dev/greenup-backend/app/: main.py
Dev/greenup-backend/app/api/v1/: router.py
Dev/greenup-backend/app/core/: config.py
Dev/greenup-backend/app/core/cache/: factory.py  memory_cache.py  protocols.py  redis_cache.py
Dev/greenup-backend/app/core/logger/: __init__.py  console_logger.py  factory.py  file_logger.py  protocols.py
Dev/greenup-backend/app/db/: session.py
Dev/greenup-backend/app/db/models/: user.py  (+3 more)
Dev/greenup-backend/app/dependencies/: auth.py  cache.py  database.py  rate_limit.py  repositories.py
Dev/greenup-backend/app/dto/: user_dto.py
Dev/greenup-backend/app/middleware/: last_login.py
Dev/greenup-backend/app/repositories/: user_repository.py  user_repository_protocol.py
Dev/greenup-backend/app/requests/: user_create_request.py
Dev/greenup-backend/app/schemas/: token.py  user.py
Dev/greenup-backend/app/services/: user_service.py
Dev/greenup-backend/app/tasks/: __init__.py  celery_app.py  tasks.py
Dev/greenup-backend/docker/: Dockerfile  docker-entrypoint.sh
Dev/greenup-backend/migrations/: env.py
Dev/greenup-backend/migrations/versions/: 78ce87caeb4d_create_users_table.py
Dev/greenup-backend/tests/: conftest.py
Dev/greenup-backend/tests/factories/: user_factory.py
Dev/greenup-backend/tests/feature/: test_auth.py  test_users.py
Dev/greenup-backend/tests/unit/: test_jwt.py  test_password.py
(+7 files in other folders)
